Fixed navigation bar and added text boxes

--- a/index.html
+++ b/index.html
@@ -7,13 +7,21 @@
     <title>Poppies</title>
   </head>
   <body>
+
     <nav>
       <ul>
-        <li id="left-item" >HOME</li>
+        <li id="nav-left" >HOME</li>
         <li>PROJECTS</li>
         <li>CONTACT</li>
-        <li id="right-item">ABOUT ME</li>
+        <li id="nav-right">ABOUT ME</li>
         </ul>
     </nav>
+
+    <section class="one-half" id="text-left">
+    </section>
+
+    <section class="one-half" id="text-right">
+    </section>
+
   </body>
 </html>
