--- a/index.html
+++ b/index.html
@@ -4,16 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet"type="text/css" />
+    <link href="fonts.css" rel="stylesheet" type="text/css" />
+
+    <link href="https://fonts.googleapis.com/css?family=Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
     <title>Poppies</title>
   </head>
   <body>
 
     <nav>
+    
+      
       <ul>
-        <li id="nav-left" >HOME</li>
-        <li>PROJECTS</li>
-        <li>CONTACT</li>
-        <li id="nav-right">ABOUT ME</li>
+        <li id="nav-left" ><a href="#">Home</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+        <li id="nav-right"><a href="#">About Me</a></li>
         </ul>
     </nav>
 
